  - Added a single-file HTML builder.

* HTML output:

  - Inline roles now get a CSS class with their name, allowing styles to
    customize their appearance.  Domain-specific roles get two classes,
    ``domain`` and ``domain-rolename``.
  - References now get the class ``internal`` if they are internal to
    the whole project, as opposed to internal to the current page.
  - #129: Toctrees are now wrapped in a ``div`` tag with class
    ``toctree-wrapper`` in HTML output.
  - The ``toctree()`` callable in templates now has a ``maxdepth``
    keyword argument to control the depth of the generated tree.
  - Added ``htmltitle`` block in layout template.
  - In the JavaScript search, allow searching for object names including
    the module name, like ``sys.argv``.
  - Added new theme ``haiku``, inspired by the Haiku OS user guide.
  - Added new theme ``nature``.
  - Added new theme ``agogo``, created by Andi Albrecht.
  - Added new theme ``scrolls``, created by Armin Ronacher.
  - #193: Added a ``visitedlinkcolor`` theme option to the default
    theme.

* Extension API:

  - Added ``html-collect-pages`` event.
  - Added ``needs_sphinx`` config value and ``Sphinx.require_sphinx``
    application API function.
  - #200: Added ``Sphinx.add_stylesheet()``.

* Extensions:

  - Added the ``viewcode`` extension.
  - Added the ``extlinks`` extension.
  - Added support for source ordering of members in autodoc, with
    ``autodoc_member_order = 'bysource'``.
  - Added ``autodoc_default_flags`` config value, which can be used to
    select default flags for all autodoc directives.
  - Added a way for intersphinx to refer to named labels in other
    projects, and to specify the project you want to link to.
  - #280: Autodoc can now document instance attributes assigned in
    ``__init__`` methods.
  - Many improvements and fixes to the ``autosummary`` extension, thanks
    to Pauli Virtanen.
  - #309: The ``graphviz`` extension can now output SVG instead of PNG