@@ -6,7 +6,7 @@ pygments_style = sphinx
 [options]
 rightsidebar = false
 stickysidebar = false
-
+collapsiblesidebar = false
 externalrefs = false
 
 footerbgcolor    = #11303d
